--- a/mbti.html
+++ b/mbti.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2>자유로운 연예인. . .</h2>
-<img src="esfp.png" width="350"><br>
+<img src="./esfp.png" width="350"><br>
 <h4>일반적인 특성</h4>
 <ol>
   <li>사교성이 뛰어나다.</li>
