--- a/1.html
+++ b/1.html
@@ -3,16 +3,21 @@
 <head>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JAVASCRIPT</a></li>
-</ol>
-<h1>HTML</h1>
-<p>Hypertext Markup Language (HTML) is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
-</p><img src="coding.jpg" width="100%"><p style="margin-top:45px;">aaa</p>
+<div id="grid">
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JAVASCRIPT</a></li>
+  </ol>
+  <div id="article">
+    <h2>HTML</h2>
+    <p>Hypertext Markup Language (HTML) is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
+    </p><img src="coding.jpg" width="100%"><p style="margin-top:45px;">aaa</p>
+  </div>
+</div>
 </body>
 </html>
