--- a/chatting.html
+++ b/chatting.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My mbti</title>
+    <title>chatting</title>
     <style>
       h1{
         border-bottom : 1px solid black;
@@ -38,6 +38,10 @@
         padding-left: 100px;
         padding-top: 50px;
       }
+      #in ul{
+        background: white;
+        padding-top: 0;
+      }
     </style>
   </head>
   <body>
@@ -51,21 +55,22 @@
       <li><a href="chatting.html">채팅하기</a></li>
     </ul>
     <div id="in">
-    <h2>My mbti is esfp !</h2>
-    <img src="esfp.PNG" width="400px" height="200px">
-    <h4>일반적인 특성</h4>
-    <ol>
-      <li>사교성이 뛰어나다.</li>
-      <li>미적감각이 있다.</li>
-      <li>정이 많고 단순하다.</li>
-    </ol>
-    <h4>개발해야 할 점</h4>
-    <ol>
-      <li>의 끊고 맺는 것을 개발할 필요가 있다.</li>
-      <li>계획성 있는 일처리 방식이 필요하다.</li>
-      <li>가끔 혼자서 자기의 내면을 성찰할 시간이 필요하다.</li>
-    </ol>
-    </div>
-    </div>
+    <h2>채팅을 원하시면 오른쪽 하단의 로고를 클릭해주세요 :)</h2>
+    <img src="chat.png" width="200px" height="200px">
+  </div>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/61e8053ab84f7301d32bd41b/1fpp58reh';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
+  </div>
   </body>
 </html>
