--- a/intro.html
+++ b/intro.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My mbti</title>
+    <title>Introduce me</title>
     <style>
       h1{
         border-bottom : 1px solid black;
@@ -38,6 +38,17 @@
         padding-left: 100px;
         padding-top: 50px;
       }
+      #in ul{
+        background: white;
+        padding-top: 0;
+      }
+      #in a{
+        text-decoration: underline;
+      }
+      #grid2 {
+        display: grid;
+        grid-auto-rows: 1fr 1fr;
+      }
     </style>
   </head>
   <body>
@@ -50,22 +61,19 @@
       <li><a href="comment.html">방명록</a></li>
       <li><a href="chatting.html">채팅하기</a></li>
     </ul>
+    <div id="grid2">
     <div id="in">
-    <h2>My mbti is esfp !</h2>
-    <img src="esfp.PNG" width="400px" height="200px">
-    <h4>일반적인 특성</h4>
-    <ol>
-      <li>사교성이 뛰어나다.</li>
-      <li>미적감각이 있다.</li>
-      <li>정이 많고 단순하다.</li>
-    </ol>
-    <h4>개발해야 할 점</h4>
-    <ol>
-      <li>의 끊고 맺는 것을 개발할 필요가 있다.</li>
-      <li>계획성 있는 일처리 방식이 필요하다.</li>
-      <li>가끔 혼자서 자기의 내면을 성찰할 시간이 필요하다.</li>
-    </ol>
+    <h2>About me !</h2>
+    <ul>
+      <li>이름 : 최정윤</li>
+      <li>생년월일 : 99.03.14</li>
+      <li>학교 : <a href="https://www.kornu.ac.kr/mbs/kornukr/intro.html">나사렛대학교</a> <a href="https://cms.kornu.ac.kr/sites/it/index.do">IT융합학부</a><img src="school.jpg" width="30px"></li>
+    </ul>
+    </div>
+    <div id="none">
+      <h2> </h2>
     </div>
     </div>
+  </div>
   </body>
 </html>
