--- a/index.html
+++ b/index.html
@@ -1,53 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <title>WEB1 - Welcome</title>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
-  <script>
-  function nightDayHandler(self){
-    var target = document.querySelector('body');
-    if(self.value ==='night'){
-      target.style.backgroundColor = 'black';
-      target.style.color = 'white';
-      self.value = 'day';
-
-      var alist = document.querySelectorAll('a');
-      var i=0;
-      while(i < alist.length){
-        alist[i].style.color = 'powderblue';
-        i = i + 1;
+  <head>
+    <meta charset="utf-8">
+    <title>WHOAMI?</title>
+    <style>
+      a{
+        color:black;
       }
-    } else{
-      target.style.backgroundColor = 'white';
-      target.style.color = 'black';
-      self.value = 'night';
-
-      var alist = document.querySelectorAll('a');
-      var i = 0;
-      while(i < alist.length){
-        alist[i].style.color = 'blue';
-        i = i + 1;
-      }
-    }
-  }
-  </script>
-<body>
-  <h1><a href="index.html">WEB</a></h1>
-  <input type="button" value="night" onclick="
-    nightDayHandler(this);
-  ">
-
-  <div id="grid">
-    <ol>
-      <li><a href="1.html">html</a></li>
-      <li><a href="2.html">css</a></li>
-      <li><a href="3.html">javascript</a></li>
-    </ol>
-    <div id="article">
-      <h2>WEB</h2>
-      <p>월드 와이드 웹(World Wide Web, WWW, W3)은 인터넷에 연결된 컴퓨터를 통해 사람들이 정보를 공유할 수 있는 전 세계적인 정보 공간을 말한다. 간단히 웹(the Web)이라 부르는 경우가 많다. 이 용어는 인터넷과 동의어로 쓰이는 경우가 많으나 엄격히 말해 서로 다른 개념이다. 웹은 전자 메일과 같이 인터넷 상에서 동작하는 하나의 서비스일 뿐이다. 그러나 1993년 이래로 웹은 인터넷 구조의 절대적 위치를 차지하고 있다.</p>
-    </div>
-  </div>
-</body>
+    </style>
+  </head>
+  <body>
+    <h1><a href="main.html">WHO AM I ?</a></h1>
+    <img src="selfie.jpg" width="350px">
+  </body>
 </html>
