--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My mbti</title>
+    <title>Main page</title>
     <style>
       h1{
         border-bottom : 1px solid black;
@@ -51,20 +51,8 @@
       <li><a href="chatting.html">채팅하기</a></li>
     </ul>
     <div id="in">
-    <h2>My mbti is esfp !</h2>
-    <img src="esfp.PNG" width="400px" height="200px">
-    <h4>일반적인 특성</h4>
-    <ol>
-      <li>사교성이 뛰어나다.</li>
-      <li>미적감각이 있다.</li>
-      <li>정이 많고 단순하다.</li>
-    </ol>
-    <h4>개발해야 할 점</h4>
-    <ol>
-      <li>의 끊고 맺는 것을 개발할 필요가 있다.</li>
-      <li>계획성 있는 일처리 방식이 필요하다.</li>
-      <li>가끔 혼자서 자기의 내면을 성찰할 시간이 필요하다.</li>
-    </ol>
+      <h2>Hello !<br>I am jungyoon, Choi</h2>
+      <img src="selfie2.jpg" width="400px">
     </div>
     </div>
   </body>
